--- a/style.css
+++ b/style.css
@@ -1,18 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap");
+
 body {
   font-size: 18px;
-  font-family: Arial, Helvetica, sans-serif;
-  margin: 0px;
+  font-family: "Barlow", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 h1,
 h2,
-.sabe-mais,
-span {
+.learn-more,
+h3 {
   font-family: "Fraunces", sans-serif;
 }
 
 p {
   color: hsl(210, 4%, 67%);
+}
+
+.burger div {
+  height: 3px;
+  width: 30px;
+  background-color: hsl(0, 0%, 100%);
+  margin: 5px 0;
+  transition: all 0.3s ease;
+}
+
+.burger {
+  display: none;
+}
+
+.mobile-img {
+  display: none;
+}
+
+.mobile-nav {
+  display: none;
 }
 
 header {
@@ -25,18 +49,14 @@ header {
   color: hsl(0, 0%, 100%);
   text-align: center;
 }
-header h1 {
-  font-size: 4rem;
-  letter-spacing: 5px;
-  margin-top: 5rem;
-}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 90%;
-  width: 90%;
-  height: 100px;
+  max-width: 80%;
+  width: 100%;
+  height: 90px;
   margin: 0 auto;
 }
 
@@ -86,7 +106,22 @@ ul a {
 }
 
 .btn:hover::before {
-  background-color: #0db4ff;
+  background-color: 0db4ff;
+}
+
+header h1 {
+  font-size: 4rem;
+  letter-spacing: 5px;
+  margin-top: 5rem;
+}
+
+.down-arrow {
+  margin-top: 4rem;
+}
+
+.down-arrow img {
+  max-width: 36px;
+  width: 100%;
 }
 
 main {
@@ -117,12 +152,12 @@ main {
   line-height: 1.5;
 }
 
-.sabe-mais {
+.learn-more {
   position: relative;
   cursor: pointer;
 }
 
-.sabe-mais::after {
+.learn-more::after {
   content: "";
   position: absolute;
   left: 0;
@@ -130,31 +165,31 @@ main {
   width: 32%;
   height: 4px;
   border-radius: 2px;
-  background-color: rgb(255, 230, 0);
+  background-color: hsl(51, 100%, 49%);
   transition: background-color 0.3s ease-in;
 }
 
-.sabe-mais:hover::after {
+.learn-more:hover::after {
   background-color: hsl(7, 99%, 70%);
 }
 
-.img-v-1 {
+.img-v1 {
   background: url(./images/desktop/image-transform.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
-.img-v-2 {
+.img-v2 {
   background: url(./images/desktop/image-stand-out.jpg) no-repeat;
   background-size: cover;
   background-position: center;
 }
-.img-v-3 {
+.img-v3 {
   background: url(./images/desktop/image-graphic-design.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
 }
-.img-v-4 {
+.img-v4 {
   background: url(./images/desktop/image-photography.jpg) no-repeat;
   background-size: cover;
   background-position: center;
@@ -180,53 +215,6 @@ main {
   margin-top: 2.5rem;
 }
 
-.bottom-img {
-  height: 100%;
-}
-
-.bottom-img img {
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.desktop-img {
-  display: block;
-}
-
-footer {
-  background-color: hsl(168, 34%, 41%);
-}
-
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.footer-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  /* margin-bottom: 2rem; */
-}
-
-.footer-nav {
-  flex-direction: column;
-  margin: 5rem 0;
-}
-
-.footer-nav .logo {
-  width: 200px;
-  margin-bottom: 3rem;
-}
-
-.footer-nav .logo svg {
-  max-width: 100%;
-  width: 100%;
-}
 .client {
   display: flex;
   flex-direction: column;
@@ -242,6 +230,7 @@ footer {
   text-align: center;
   width: 80%;
 }
+
 .client-img {
   width: 70px;
   height: 70px;
@@ -270,43 +259,75 @@ footer {
 .client-3 p {
   width: 80%;
   margin: 0 auto;
-  color: hsl(232, 10%, 55%);
+  color: hsl(213, 9%, 39%);
 }
 
 .client-info {
   margin-top: 3rem;
 }
 
-.client-info span {
-  margin-bottom: 2rem;
+.client-info h3 {
+  margin-bottom: 1rem;
 }
-.colecao-de-fotos {
+
+.img-section {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  position: relative;
-  max-width: 100%;
 }
-.mini-foto {
+
+.bottom-img {
   height: 100%;
 }
-.mini-foto img {
+
+.bottom-img img {
   max-width: 100%;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.rede-socias {
+
+.desktop-img {
+  display: block;
+}
+
+footer {
+  background-color: hsl(168, 34%, 41%);
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-nav {
+  flex-direction: column;
+  margin: 5rem 0;
+}
+
+.footer-nav .logo {
+  width: 200px;
+  margin-bottom: 3rem;
+}
+
+.footer-nav .logo svg {
+  max-width: 100%;
+  width: 100%;
+}
+
+.social-links {
   width: 200px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 5rem;
 }
 
-.rede-socias span {
+.social-links span {
   cursor: pointer;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 760px) {
   nav {
     width: 85%;
   }
@@ -340,6 +361,7 @@ footer {
     display: none;
   }
 }
+
 @media screen and (max-width: 590px) {
   header {
     background: url(./images/mobile/image-header.jpg);
@@ -351,12 +373,12 @@ footer {
   }
 
   nav ul {
-    height: 50%;
+    display: none;
   }
 
   .mobile-nav {
     display: block;
-    background-color: white;
+    background-color: hsl(0, 0%, 100%);
     border-radius: 5px;
     width: 90%;
     right: 0;
@@ -377,6 +399,28 @@ footer {
     align-items: center;
     justify-content: space-around;
     height: 70vh;
+  }
+
+  .mobile-ul a {
+    color: hsl(232, 10%, 55%);
+  }
+
+  .btn::before {
+    background-color: hsl(51, 100%, 49%);
+  }
+
+  .burger {
+    display: block;
+  }
+
+  .toggle .menu-1 {
+    transform: rotate(45deg) translateX(11px);
+  }
+  .toggle .menu-2 {
+    opacity: 0;
+  }
+  .toggle .menu-3 {
+    transform: rotate(-45deg) translateX(11px);
   }
 
   .mobile-img {
@@ -404,7 +448,7 @@ footer {
     grid-template-rows: repeat(6, 80vh);
   }
 
-  .img-box-1 {
+  .img-v1 {
     order: 1;
     background: url(./images/mobile/image-transform.jpg);
     background-size: cover;
@@ -415,7 +459,7 @@ footer {
     order: 2;
   }
 
-  .img-box-2 {
+  .img-v2 {
     order: 3;
     background: url(./images/mobile/image-stand-out.jpg) no-repeat;
     background-size: cover;
@@ -426,14 +470,14 @@ footer {
     order: 4;
   }
 
-  .img-box-3 {
+  .img-v3 {
     order: 5;
     background: url(./images/mobile/image-graphic-design.jpg) no-repeat;
     background-size: cover;
     background-position: center;
   }
 
-  .img-box-4 {
+  .img-v4 {
     order: 6;
     background: url(./images/mobile/image-photography.jpg) no-repeat;
     background-size: cover;
